<resources>
    <string name="app_name">Swoosh</string>
    <string name="get_started">Get Started</string>
    <string name="go_all">Go All In</string>
    <string name="go_out">On Going All Out</string>
    <string name="find">Find a team in your city &amp; dominate your league</string>
    <string name="desired">Desired League:</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-ed</string>
    <string name="next">next</string>
    <string name="content_des_background">Background Image</string>
    <string name="content_des_swoosh_logo">Swoosh Logo</string>
    <string name="iam">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
    <string name="finding_leagues">Finding Leagues near You!</string>
</resources>
